# MLOpsRepo

./: .gitignore  Dockerfile  Functions.py  RepoInit.py  main.py  pyproject.toml
