[project]
name = "mlopsrepo"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Bejjani",email = "andrewbejjani02@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
]
[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
